Overflow UI bug fixed

--- a/style.css
+++ b/style.css
@@ -18,21 +18,6 @@ body {
     position: relative;
 }
 
-/* *Canva */
-.canva {
-    grid-column-start: 2;
-    grid-column-end: 4;
-    grid-row-start: 2;
-    grid-row-end: 5;
-
-    background-color: #3F4E4F;
-
-    border-style: solid;
-    border-width: 4px;
-    border-color: #EDDFB3;
-    border-radius: 5px;
-}
-
 /* *board */
 main#board {
     border-width: 5px;
@@ -118,7 +103,6 @@ header h1{
     grid-row-end: 4;
 
     width: 320px;
-
     display: flex;
 
     padding: 20px;
